--- a/page3.html
+++ b/page3.html
@@ -12,21 +12,24 @@
 </head>
 <body>
  <div class="container">
-    <div class="row  flex-lg-row  flex-md-wrap-reverse justify-content-md-end">
+    <div class="row  flex-lg-row  flex-md-row-reverse justify-content-end ">
         <div class="col-lg-4 col-md-6 col-sm-12  color-green ">1</div>
         <div class="col-lg-4 col-md-6 col-sm-12  color-pink">2</div>
         <div class="col-lg-4 col-md-6 col-sm-12  color-red">3</div>
     </div>
-     <div class="row  flex-lg-row flex-md-column-reverse justify-content-md-end">
-        <div class="col-lg-4 col-md-6 col-sm-12  color-yellow">1</div>
-        <div class="col-lg-4 col-md-6 col-sm-12 color-gray">2</div>
-        <div class="col-lg-4 col-md-6 col-sm-12 color-orange">3</div>
+    
+    <div class="row  flex-lg-row  flex-md-row-reverse justify-content-end ">
+        <div class="col-lg-4 col-md-6 col-sm-12  color-dark ">1</div>
+        <div class="col-lg-4 col-md-6 col-sm-12   color-gray">2</div>
+        <div class="col-lg-4 col-md-6 col-sm-12  color-orange">3</div>
     </div>
-     <div class="row  flex-md-row-reverse">
-        <div class="col-lg-4 col-md-6 col-sm-12  color-dark">1</div>
-        <div class="col-lg-4 col-md-6 col-sm-12 color-blue">2</div>
+
+     <div class="row  flex-lg-row  flex-md-row-reverse justify-content-end ">
+        <div class="col-lg-4 col-md-6 col-sm-12  color-red ">1</div>
+        <div class="col-lg-4 col-md-6 col-sm-12  color-blue">2</div>
         <div class="col-lg-4 col-md-6 col-sm-12 color-bluesky">3</div>
-    </div>
+     </div>
+
  </div>
 
 <script src="./js/lib/bootstrap.min.js"></script>
