--- a/page3.html
+++ b/page3.html
@@ -12,22 +12,22 @@
 </head>
 <body>
  <div class="container">
-    <div class="row  flex-lg-row  flex-md-row-reverse justify-content-end ">
-        <div class="col-lg-4 col-md-6 col-sm-12  color-green ">1</div>
-        <div class="col-lg-4 col-md-6 col-sm-12  color-pink">2</div>
-        <div class="col-lg-4 col-md-6 col-sm-12  color-red">3</div>
+    <div class="row flex-lg-row-reverse flex-md-wrap flex-sm-wrap">
+        <div class="col-lg-4 col-md-6 col-sm-12 order-md-3 color-green ">1</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-md-2 color-pink">2</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-md-1 color-red">3</div>
     </div>
     
-    <div class="row  flex-lg-row  flex-md-row-reverse justify-content-end ">
-        <div class="col-lg-4 col-md-6 col-sm-12  color-dark ">1</div>
-        <div class="col-lg-4 col-md-6 col-sm-12   color-gray">2</div>
-        <div class="col-lg-4 col-md-6 col-sm-12  color-orange">3</div>
+    <div class="row flex-lg-row-reverse flex-md-wrap">
+        <div class="col-lg-4 col-md-6 col-sm-12 order-3  color-dark ">1</div>
+        <div class="col-lg-4 col-md-6 col-sm-12  order-2  color-gray">2</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-1  color-orange">3</div>
     </div>
 
-     <div class="row  flex-lg-row  flex-md-row-reverse justify-content-end ">
-        <div class="col-lg-4 col-md-6 col-sm-12  color-red ">1</div>
-        <div class="col-lg-4 col-md-6 col-sm-12  color-blue">2</div>
-        <div class="col-lg-4 col-md-6 col-sm-12 color-bluesky">3</div>
+     <div class="row flex-lg-row-reverse flex-md-wrap ">
+        <div class="col-lg-4 col-md-6 col-sm-12 order-3 color-red ">1</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-2 color-blue">2</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-1 color-bluesky">3</div>
      </div>
 
  </div>
