--- a/page4.html
+++ b/page4.html
@@ -9,56 +9,92 @@
     <link rel="stylesheet" href="./css/lib/fontawesome/css/all.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+<style>
+       .color-purple{
+             background-color: #E9C7FF;
+              height: 80px;
+              border:1px solid #fff;
+              text-align: center; 
+        }
+         .color-green{
+             background-color: #9DFFB4;
+              height: 80px;
+               border:1px solid #fff;
+               text-align: center; 
+        }
+
+         .color-pink{
+             background-color: #FFD7C7;
+              height: 80px;
+             border:1px solid #fff;
+              text-align: center; 
+        }
+
+          .color-blue{
+             background-color: #C7D6FF;
+              height: 80px;
+            border:1px solid #fff;
+            text-align: center; 
+        }
+    </style>
 
 <body>
-
     <div class="container">
         <div class="row">
-            <div class="col-lg col-md-3 color-pink">1</div>
-            <div class="col-lg col-md-3  color-pink">2</div>
-            <div class="col-lg col-md-3  color-pink">3</div>
-            <div class="col-lg col-md-3 color-pink">4</div>
-            <div class="col-lg col-md-3  color-pink">5</div>
-            <div class="col-lg col-md-3 color-pink">6</div>
-            <div class="col-lg col-md-3  color-pink">7</div>
-            <div class="col-lg col-md-3 color-pink">8</div>
-        </div>
-        <div class="row">
-            <div class="col-lg col-md-3  color-red">1</div>
-            <div class="col-lg col-md-3 color-red ">2</div>
-            <div class="col-lg col-md-3 color-red order-md-1">3</div>
-            <div class="col-lg col-md-3 color-red order-md-2">4</div>
-            <div class="col-lg col-md-3 color-red">5</div>
-            <div class="col-lg col-md-3 color-red ">6</div>
-            <div class="col-lg col-md-3 color-red  order-md-3">7</div>
-            <div class="col-lg col-md-3  color-red order-md-4">8</div>
+            <div class="col-lg-6 col-md-12">
+                <div class="row">
+                    <div class="col-3 color-purple">1</div>
+                    <div class="col-3 color-purple">2</div>
+                    <div class="col-3 color-purple">3</div>
+                    <div class="col-3 color-purple">4</div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="row">
+                    <div class="col-3 color-purple">5</div>
+                    <div class="col-3 color-purple">6</div>
+                    <div class="col-3 color-purple">7</div>
+                    <div class="col-3 color-purple">8</div>
+                </div>
+            </div>
         </div>
 
+        <div class="row">
+            <div class="col-lg-6 col-md-12">
+                <div class="row">
+                    <div class="col-3 color-green">1</div>
+                    <div class="col-3 color-green">2</div>
+                    <div class="col-3 color-green">3</div>
+                    <div class="col-3 color-green">4</div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+                <div class="row">
+                    <div class="col-3 color-green order-md-1">5</div>
+                    <div class="col-3 color-green order-md-2">6</div>
+                    <div class="col-3 color-green order-md-3 ">7</div>
+                    <div class="col-3 color-green order-md-4">8</div>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-lg-2 col-md-6 color-blue">1</div>
             <div class="col-lg-2 col-md-6 color-blue">2</div>
             <div class="col-lg-2 col-md-6 color-blue">3</div>
-            <div class="col-lg-2 d-lg-none d-lg-block col-md-6 bg-white"></div>
-
+            <div class="col-lg-2 d-lg-none col-md-6 bg-white"></div>
             <div class="col-lg-2 col-md-6 color-blue">4</div>
             <div class="col-lg-2 col-md-6 color-blue">5</div>
             <div class="col-lg-2 col-md-6 color-blue">6</div>
-            <div class="col-lg-2 d-lg-none d-lg-block col-md-6 bg-white"></div>
+            <div class="col-lg-2 d-lg-none col-md-6 bg-white"></div>
         </div>
-
 
         <div class="row">
-            <div class="col-lg-4 col-md-6 color-green">1</div>
-           <div class="col-lg-4  d-lg-none d-lg-block  col-md-6 bg-white"></div>
-            <div class="col-lg-4 col-md-6 color-green">2</div>
-            <div class="col-lg-4 col-md-6 color-green">3</div>
+            <div class="col-lg-4 col-md-6 color-pink">1</div>
+           <div class="col-lg-4  d-lg-none  col-md-6  bg-white"></div>
+            <div class="col-lg-4 col-md-6 color-pink">2</div>
+            <div class="col-lg-4 col-md-6 color-pink">3</div>
         </div>
-
     </div>
-
-    <script src="./js/lib/bootstrap.min.js"></script>
-    <script src="./js/lib/fontawesome.min.js"></script>
-    <script src="./js/script.js"></script>
 </body>
 
 </html>
