--- a/page3.html
+++ b/page3.html
@@ -9,25 +9,26 @@
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="./css/lib/fontawesome/css/all.css">
     <link rel="stylesheet" href="./css/style.css">
+    
 </head>
 <body>
  <div class="container">
     <div class="row flex-lg-row-reverse flex-md-wrap flex-sm-wrap">
-        <div class="col-lg-4 col-md-6 col-sm-12 order-md-3 color-green ">1</div>
-        <div class="col-lg-4 col-md-6 col-sm-12 order-md-2 color-pink">2</div>
-        <div class="col-lg-4 col-md-6 col-sm-12 order-md-1 color-red">3</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-md-3 color-blue1 ">1</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-md-2 color-blue2">2</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-md-1 color-blue3">3</div>
     </div>
     
     <div class="row flex-lg-row-reverse flex-md-wrap">
-        <div class="col-lg-4 col-md-6 col-sm-12 order-3  color-dark ">1</div>
-        <div class="col-lg-4 col-md-6 col-sm-12  order-2  color-gray">2</div>
-        <div class="col-lg-4 col-md-6 col-sm-12 order-1  color-orange">3</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-3  color-orange1 ">1</div>
+        <div class="col-lg-4 col-md-6 col-sm-12  order-2  color-orange2">2</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-1  color-orange3">3</div>
     </div>
 
      <div class="row flex-lg-row-reverse flex-md-wrap ">
-        <div class="col-lg-4 col-md-6 col-sm-12 order-3 color-red ">1</div>
-        <div class="col-lg-4 col-md-6 col-sm-12 order-2 color-blue">2</div>
-        <div class="col-lg-4 col-md-6 col-sm-12 order-1 color-bluesky">3</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-3 color-green1 ">1</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-2 color-green2">2</div>
+        <div class="col-lg-4 col-md-6 col-sm-12 order-1 color-green3">3</div>
      </div>
 
  </div>
