--- a/page2.html
+++ b/page2.html
@@ -9,33 +9,34 @@
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="./css/lib/fontawesome/css/all.css">
     <link rel="stylesheet" href="./css/style.css">
+  
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-8">
                  <div class="row">
-                    <div class="col-lg-4 col-md-12 col-sm-12 color-green"></div>
-                    <div class="col-lg-4 col-md-12 col-sm-12 color-green"></div>
-                    <div class="col-lg-4 col-md-12 col-sm-12 color-green"></div>
+                    <div class="col-lg-4 col-md-12 col-sm-12 color-blue"></div>
+                    <div class="col-lg-4 col-md-12 col-sm-12 color-blue"></div>
+                    <div class="col-lg-4 col-md-12 col-sm-12 color-blue"></div>
                  </div>
                   <div class="row">
-                    <div class="col-lg-3 col-md-6 col-6 color-red"></div>
-                    <div class="col-lg-3 col-md-6 col-6 color-red"></div>
-                    <div class="col-lg-3 col-md-6 col-6 color-red"></div>
-                    <div class="col-lg-3 col-md-6 col-6 color-red"></div>
+                    <div class="col-lg-3 col-md-6 col-6 color-purple "></div>
+                    <div class="col-lg-3 col-md-6 col-6 color-purple "></div>
+                    <div class="col-lg-3 col-md-6 col-6 color-purple "></div>
+                    <div class="col-lg-3 col-md-6 col-6 color-purple "></div>
                  </div>
                   <div class="row">
-                    <div class="col-lg-4 col-md-4  col-6 color-pink"></div>
-                    <div class="col-lg-4 col-md-4  col-6 color-pink"></div>
-                    <div class="col-lg-4 col-md-4  col-12 color-pink"></div>
+                    <div class="col-lg-4 col-md-4  col-6 color-orange"></div>
+                    <div class="col-lg-4 col-md-4  col-6 color-orange"></div>
+                    <div class="col-lg-4 col-md-4  col-12 color-orange"></div>
                  </div>
             </div>
             <div class="col-lg-4 col-md-4">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 color-blue "></div>
-                    <div class="col-lg-12 col-md-12 color-blue "></div>
-                    <div class="col-lg-12 col-md-12 color-blue "></div>
+                    <div class="col-lg-12 col-md-12 color-green "></div>
+                    <div class="col-lg-12 col-md-12 color-green "></div>
+                    <div class="col-lg-12 col-md-12 color-green "></div>
                 </div>
 
             </div>
