--- a/page4.html
+++ b/page4.html
@@ -13,39 +13,39 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 ">
                 <div class="row">
-                    <div class="col-3  color-purple">1</div>
-                    <div class="col-3 color-purple">2</div>
-                    <div class="col-3 color-purple">3</div>
-                    <div class="col-3 color-purple">4</div>
+                    <div class="col-lg-3 col-md-3 color-purple">1</div>
+                    <div class="col-lg-3 col-md-3 color-purple">2</div>
+                    <div class="col-lg-3 col-md-3 color-purple">3</div>
+                    <div class="col-lg-3 col-md-3 color-purple">4</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="row">
-                    <div class="col-3 color-purple">5</div>
-                    <div class="col-3 color-purple">6</div>
-                    <div class="col-3 color-purple">7</div>
-                    <div class="col-3 color-purple">8</div>
+                    <div class="col-lg-3 col-md-3 color-purple">5</div>
+                    <div class="col-lg-3 col-md-3 color-purple">6</div>
+                    <div class="col-lg-3 col-md-3 color-purple">7</div>
+                    <div class="col-lg-3 col-md-3 color-purple">8</div>
                 </div>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-6">
                 <div class="row">
-                    <div class="col-3 color-green">1</div>
-                    <div class="col-3 color-green">2</div>
-                    <div class="col-3 color-green">3</div>
-                    <div class="col-3 color-green">4</div>
+                    <div class="col-lg-3   col-md-6 color-green">1</div>
+                    <div class="col-lg-3   col-md-6 color-green">2</div>
+                    <div class="col-lg-3  col-md-6 color-green">3</div>
+                    <div class="col-lg-3  col-md-6 color-green">4</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-6">
                 <div class="row ">
-                    <div class="col-3 color-green order-1">5</div>
-                    <div class="col-3 color-green order-2">6</div>
-                    <div class="col-3 color-green order-3 ">7</div>
-                    <div class="col-3 color-green order-4">8</div>
+                    <div class="col-lg-3  col-md-6 color-green ">5</div>
+                    <div class="col-lg-3  col-md-6 color-green ">6</div>
+                    <div class="col-lg-3  col-md-6 color-green  ">7</div>
+                    <div class="col-lg-3  col-md-6 color-green ">8</div>
                 </div>
             </div>
         </div>
