--- a/page2.html
+++ b/page2.html
@@ -27,9 +27,9 @@
                     <div class="col-lg-3 col-md-6 col-6 color-purple "></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-4  col-6 color-orange"></div>
-                    <div class="col-lg-4 col-md-4  col-6 color-orange"></div>
-                    <div class="col-lg-4 col-md-4  col-12 color-orange"></div>
+                    <div class="col-lg-4 col-md-4  col-6 color-pink"></div>
+                    <div class="col-lg-4 col-md-4  col-6 color-pink"></div>
+                    <div class="col-lg-4 col-md-4  col-12 color-pink"></div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4">
