--- a/page3.html
+++ b/page3.html
@@ -20,9 +20,9 @@
         </div>
 
         <div class="row flex-lg-row-reverse flex-md-wrap">
-            <div class="col-lg-4 col-md-6 col-sm-12 order-3  color-orange1 ">1</div>
-            <div class="col-lg-4 col-md-6 col-sm-12  order-2  color-orange2">2</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 order-1  color-orange3">3</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 order-3  color-pink1 ">1</div>
+            <div class="col-lg-4 col-md-6 col-sm-12  order-2  color-pink2">2</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 order-1  color-pink3">3</div>
         </div>
 
         <div class="row flex-lg-row-reverse flex-md-wrap ">
