--- a/page5.html
+++ b/page5.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="./css/lib/fontawesome/css/all.css">
     <link rel="stylesheet" href="./css/style.css">
     <style>
+
+        .container-full{
+            width:100%;
+            margin: auto;
+        }
         .row {
             display: flex;
             justify-content: flex-start;
@@ -74,7 +79,7 @@
 <body>
 
 
-    <div class="container">
+    <div class="container-full">
         <div class="row">
             <div class="box1-column">1</div>
             <div class="box1-column">2</div>
